<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RowItem">

    <LinearLayout style="@style/RowItemBody">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgImage"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_person_grey_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvCrn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/crn"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:text="@string/name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="15sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvPresencePercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/presence_percent"
                    android:textSize="12sp"
                    android:typeface="monospace" />

            </LinearLayout>


        </LinearLayout>

        <ImageButton
            android:id="@+id/btnOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="5dp"
            android:src="@drawable/ic_more_vert_black_24dp" />

    </LinearLayout>

    <View style="@style/ItemSeparator" />

</LinearLayout>